--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AdmazsShipping - Shipping Management System</title>
     <meta name="description" content="Professional shipping and logistics management platform" />
-    <meta name="author" content="AdmazsShipping" />
+    <meta name="author" content="Allan" />
 
     <meta property="og:title" content="AdmazsShipping - Shipping Management System" />
     <meta property="og:description" content="Professional shipping and logistics management platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
